--- a/janet_config.json
+++ b/janet_config.json
@@ -3,7 +3,11 @@
       "gmail": {
         "command": "npx",
         "args": ["@gongrzhe/server-gmail-autoauth-mcp"]
-      }
+      },
+      "google-calendar": {
+        "command": "npx",
+        "args": ["@cocal/google-calendar-mcp"]
+    }
     }
   }
   
