--- a/janet_config.json
+++ b/janet_config.json
@@ -7,7 +7,18 @@
       "google-calendar": {
         "command": "npx",
         "args": ["@cocal/google-calendar-mcp"]
-    }
+      },
+      "pdf-reader": {
+        "command": "npx",
+        "args": ["@sylphlab/pdf-reader-mcp"]
+      },
+      "Bright Data": {
+        "command": "npx",
+        "args": ["@brightdata/mcp"],
+        "env": {
+            "API_TOKEN": "your_bright_data_api_token_here"
+        }
+     }
     }
   }
   
